--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@tailwindcss/cli": "^4.1.10",
     "axios": "^1.6.5",
     "cool-ascii-faces": "^1.3.4",
+    "dotenv": "^16.5.0",
     "figlet": "^1.7.0",
     "pinia": "^2.1.7",
     "socket.io-client": "^4.7.4",
@@ -19,9 +21,13 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.10",
     "@vitejs/plugin-vue": "^4.5.2",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "postcss": "^8.5.5",
+    "tailwindcss": "^4.1.10",
     "vite": "^5.0.10"
   }
 }
