--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@heroicons/vue": "^2.2.0",
     "@popperjs/core": "^2.11.8",
     "@tailwindcss/cli": "^4.1.10",
     "axios": "^1.6.5",
@@ -24,7 +25,9 @@
     "pinia": "^2.1.7",
     "socket.io-client": "^4.7.4",
     "vue": "^3.3.11",
-    "vue-router": "^4.2.5"
+    "vue-final-modal": "^4.5.5",
+    "vue-router": "^4.2.5",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.10",
