--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pinia": "^2.1.7",
     "socket.io-client": "^4.7.4",
     "vue": "^3.3.11",
+    "vue-chartjs": "^5.3.2",
     "vue-final-modal": "^4.5.5",
     "vue-router": "^4.2.5",
     "vue-toastification": "^2.0.0-rc.5"
